fix logo padding alignment

--- a/CoreDev-Frontend/src/component/Navigation/Navigation.css
+++ b/CoreDev-Frontend/src/component/Navigation/Navigation.css
@@ -12,7 +12,7 @@
     
     margin-right: 10px;
     border-radius: 8px;
-    padding: 10px;
+    padding: 10px 0;
 }
 .brands div {
     margin-right: 5px;
